<resources>
    <string name="app_name">Mommia</string>
    <string name="continue_As">Continue As!</string>
    <string name="nameTo">Tourist</string>
    <string name="nameTG">Tour guide</string>
    <string name="register">Register</string>
    <string name="sign_email">Sign up with email</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="forget">Forget your password!</string>
    <string name="pass">Password</string>
    <string name="phone">Phone Number</string>
    <string name="recommended">Recommended places</string>
    <string name="sign">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_google">Sign up with Google</string>
    <string name="Discover"> Discover the \nrich history and \ncultural heritage \nof Egypt</string>


    <string name="tv_full_name">Full Name</string>
    <string name="tv_gender">Gender</string>
    <string name="sw_gender1">Male</string>
    <string name="sw_gender2">Female</string>
    <string name="tv_national">National</string>
    <string name="tv_date_of_birth">Date Of Birth</string>
    <string name="tv_passport_national">Passport / National ID</string>
    <string name="et_passport_national">Choose File</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_next">Next</string>


    <string name="tv_complete">Complete your profile</string>
    <string name="tv_name">Name</string>
    <string name="tv_add_photo">Add profile photo</string>
    <string name="tv_college">Enter your college</string>
    <string name="tv_cost">Cost average</string>
    <string name="tv_languages">Languages</string>
    <string name="tv_company">If you work in a company , enter the name</string>
    <string name="tv_certificate">Add your graduation certificate</string>
    <string name="tv_experience">About your experience</string>
    <string name="btn_done">Done</string>







</resources>