<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_custom">
    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="@dimen/txtSize"
        android:text="@string/sign_in"
        />
    <LinearLayout
        android:id="@+id/lin1"
        android:layout_below="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txtSize20"
            android:layout_marginLeft="@dimen/marLift"
            android:layout_marginBottom="8dp"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/et_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_custom"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/marLift"
            android:layout_marginRight="@dimen/marLift"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin2"
        android:layout_below="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar"
        android:layout_marginBottom="@dimen/mar"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/txtSize20"
            android:layout_marginLeft="@dimen/marLift"
            android:layout_marginBottom="8dp"
            android:text="@string/pass"/>
        <EditText
            android:id="@+id/et_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_custom"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/marLift"
            android:layout_marginRight="@dimen/marLift"
            />



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/mar"
        android:layout_marginEnd="@dimen/mar"
        android:layout_marginBottom="@dimen/mar"
        android:background="@drawable/btn_custom_yellow"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/txtSize20" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:background="@android:color/transparent"
        android:text="@string/forget"
        android:textColor="#5C5C5C"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>