<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Complete_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/tv_complete"
            android:textColor="#F0AE2E"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="30dp"
            android:text="@string/tv_name"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_add_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/btn_custom_black"
            android:padding="5dp"
            android:text="@string/tv_add_photo"
            android:textColor="@color/white"
            android:textSize="19sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_college"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="12dp"
                    android:gravity="top"
                    android:text="@string/tv_college"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/et_college"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/et_custom"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="12dp"
                    android:gravity="top"
                    android:text="@string/tv_cost"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/et_cost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/et_custom"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:text="@string/tv_languages"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_languages"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_custom"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:text="@string/tv_company"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_company"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_custom"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_certificate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:text="@string/tv_certificate"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_certificate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_custom"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:text="@string/tv_experience"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_experience"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/et_custom"
            android:inputType="text"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_custom_yellow"
            android:text="@string/btn_done"
            android:textAllCaps="false" />


    </LinearLayout>

</ScrollView>
