<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/back_continue"
        android:orientation="vertical"
        tools:ignore="MissingDefaultResource">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="14dp"
            android:text="@string/continue_As"
            android:textColor="@color/yellow"
            android:textSize="@dimen/txtSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTourist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/btn_custom_black"
                android:text="@string/nameTo"
                android:textColor="@color/yellow" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTorGuide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:background="@drawable/btn_custom_yellow"
                android:text="@string/nameTG"
                android:textColor="@color/black" />

        </LinearLayout>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</RelativeLayout>